<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="377dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:hint="@string/task_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="382dp"
        android:layout_height="71dp"
        android:layout_margin="16dp"
        android:hint="@string/task_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_task_title" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_task_description"
        android:layout_margin="16dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:itemIconTint="@color/nav_item_color_state_list"
        app:itemTextColor="@color/nav_item_color_state_list"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
